_styles/global.scss
body {
  font-size: 62.5%;
}

a {
  color: #1a8be2;
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}

h2 {
  @include outer-container();
  @include rem-fallback('font-size', 2);
  @include rem-fallback('padding', 2, 0, 0, 0);
  font-family: $font-sans;
  font-weight: 100;
}

h3 {
  @include rem-fallback('font-size', 1.5);
  @include rem-fallback('padding', 1, 0, 0, 0);
  font-family: $font-sans;
  font-weight: 100;
}

hr {
  @include outer-container();
  padding: .5em 0 1em 0;
}

ol, ul {
  @include outer-container();
  font-family: $font-serif;
  padding: 0 0 1em 0;
  font-size: 1.3rem;

  li {
    padding: 0 0 .5em .2em;
    margin-left: 1.2em;
  }
}

iframe {
  display: block;
}

.highlight pre code span {
  margin-right: .5em;
}

// Main content area basic formatting
main {
  @include row;

  > header, > section, > footer {
    @include outer-container;
  }


  // Page Header
  & > header,
  & > article header {
    margin-top: 4em;
    text-align: center;

    h1, p, span {
      @include media($tablet) {
        @include span-columns(8);
        @include shift(2);
      }
    }
  }

  header {
    h1, p, span {
      font-weight: 100;
      font-family: $font-sans;
      color: $color-normal-text;

      // TODO: Consolidate duplicated styles (content -> Main content column settings.)
      @include span-columns(10);
      @include shift(1);

      span {
        width: auto;
        margin: 0;
      }
    }

    h1 {
      @include rem-fallback(font-size, 2.8);
      @include rem-fallback(padding-top, 5);
      @include rem-fallback(padding-bottom, 4);
    }

    span {
      @include media($tablet) {
        @include row;
        @include rem-fallback(font-size, 1);
        @include rem-fallback(padding-bottom, 3);
      }
    }

    p {
      @include subtle-emphases;
      @include rem-fallback(padding-bottom, 4);
    }
  }
}

